# otus-cpp-basic-hw8

./: CMakeLists.txt  CRC32.cpp  README.md  exampleСRС32.cpp  main.cpp  test_hash.hpp
